--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@react-router/serve": "7.12.0",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-table": "^8.21.3",
+    "@turf/turf": "^7.3.2",
+    "@types/leaflet": "^1.9.21",
+    "@types/turf": "^3.5.32",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -54,10 +57,12 @@
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.17.0",
     "next-themes": "^0.4.6",
+    "ol": "^10.7.0",
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.70.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^4.3.3",
     "react-router": "7.12.0",
     "recharts": "^2.15.4",
@@ -69,6 +74,7 @@
   "devDependencies": {
     "@react-router/dev": "7.12.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
